--- a/.github/actions/build-ocp-addons/action.yml
+++ b/.github/actions/build-ocp-addons/action.yml
@@ -156,8 +156,8 @@ runs:
 
         cd ocp-addons
         if [[ "$RUNNER_OS" == "macOS" ]]; then
-          export CC=$CONDA_PREFIX/clang
-          export CXX=$CONDA_PREFIX/clang++
+          export CC=clang
+          export CXX=clang++
         fi
         
         clang++ --version
