--- a/.github/workflows/build-ocp.yml
+++ b/.github/workflows/build-ocp.yml
@@ -13,7 +13,6 @@ env:
 #  VTK313_URL: https://github.com/CadQuery/ocp-build-system/releases/download/v7.8.1.0-dev
 
 jobs:
-
   # ================================================================================
   # Build SDKs for OCCT and VTK
   # ================================================================================
@@ -23,7 +22,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: ubuntu:20.04
-      options: --name ci-ubuntu-20  # needed for manylinux_3_31
+      options: --name ci-ubuntu-20 # needed for manylinux_3_31
     strategy:
       fail-fast: false
       matrix:
@@ -53,7 +52,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ["macos-13", "macos-15", "windows-2022"]
+        # os: ["macos-13", "macos-15", "windows-2022"]
+        os: ["macos-13", "macos-15"]
         # python-version: ["3.10", "3.11", "3.12", "3.13"]
         python-version: ["3.13"]
         use-vtk: ["vtk", "novtk"]
@@ -70,12 +70,12 @@ jobs:
             vtk-prefix: ""
             sed-i: "gsed -i"
             shells: "bash"
-          - os: "windows-2022"
-            vtk-libs: "vtk*.dll"
-            vtk-suffix: "/"
-            vtk-prefix: "Library/"
-            sed-i: "sed -i"
-            shells: "bash cmd.exe"
+          # - os: "windows-2022"
+          #   vtk-libs: "vtk*.dll"
+          #   vtk-suffix: "/"
+          #   vtk-prefix: "Library/"
+          #   sed-i: "sed -i"
+          #   shells: "bash cmd.exe"
     steps:
       - uses: actions/checkout@v4
 
@@ -92,10 +92,9 @@ jobs:
           sed-i: ${{ matrix.sed-i }}
           shells: ${{ matrix.shells }}
 
-
   # ================================================================================
   # Generate OCP sources
-  # This follows exactly the azure pipeline defined in the OCP repo and uses a 
+  # This follows exactly the azure pipeline defined in the OCP repo and uses a
   # micromamba env based approach for all packages.
   # ================================================================================
 
@@ -105,7 +104,7 @@ jobs:
 
     container:
       image: ubuntu:20.04
-      options: --name ci-ubuntu-20  # needed for manylinux_3_31
+      options: --name ci-ubuntu-20 # needed for manylinux_3_31
 
     strategy:
       fail-fast: false
@@ -133,13 +132,14 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ["macos-15", "windows-2022"]
+        # os: ["macos-15", "windows-2022"]
+        os: ["macos-15"]
         python-version: ["3.13"]
         include:
           - os: "macos-15"
             sed-i: "gsed -i"
-          - os: "windows-2022"
-            sed-i: "sed -i"
+          # - os: "windows-2022"
+          #   sed-i: "sed -i"
 
     steps:
       - uses: actions/checkout@v4
@@ -160,7 +160,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: ubuntu:20.04
-      options: --name ci-ubuntu-20  # needed for manylinux_3_31
+      options: --name ci-ubuntu-20 # needed for manylinux_2_31
     needs: [sdks-ubuntu, sources-ubuntu]
 
     strategy:
@@ -170,7 +170,7 @@ jobs:
         # python-version: ["3.10", "3.11", "3.12", "3.13"]
         python-version: ["3.13"]
         use-vtk: ["vtk", "novtk"]
-    steps: 
+    steps:
       - uses: actions/checkout@v4
       - name: Build OCP
         id: build-ocp
@@ -194,7 +194,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ["macos-13", "macos-15", "windows-2022"]
+        # os: ["macos-13", "macos-15", "windows-2022"]
+        os: ["macos-13", "macos-15"]
         # python-version: ["3.10", "3.11", "3.12", "3.13"]
         python-version: ["3.13"]
         use-vtk: ["vtk", "novtk"]
@@ -215,13 +216,13 @@ jobs:
             env: "MACOSX_DEPLOYMENT_TARGET=11.1"
             shells: "bash"
             ocp-tag: "macos-15"
-          - os: "windows-2022"
-            delocate: delvewheel
-            plat: win_amd64
-            sed-i: "sed -i"
-            shells: "bash cmd.exe"
-            module: "OCP.*.pyd"
-            ocp-tag: "windows-2022"
+          # - os: "windows-2022"
+          #   delocate: delvewheel
+          #   plat: win_amd64
+          #   sed-i: "sed -i"
+          #   shells: "bash cmd.exe"
+          #   module: "OCP.*.pyd"
+          #   ocp-tag: "windows-2022"
     steps:
       - uses: actions/checkout@v4
       - name: Build OCP
@@ -239,7 +240,6 @@ jobs:
           env: ${{ matrix.env }}
           ocp-tag: ${{ matrix.ocp-tag }}
 
-
   # ================================================================================
   # Tests
   # ================================================================================
@@ -252,7 +252,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ["macos-13", "macos-15", "ubuntu-22.04", "windows-2022"]
+        # os: ["macos-13", "macos-15", "ubuntu-22.04", "windows-2022"]
+        os: ["macos-13", "macos-15", "ubuntu-22.04"]
         # python-version: ["3.10", "3.11", "3.12", "3.13"]
         python-version: ["3.13"]
         use-vtk: ["vtk", "novtk"]
@@ -262,8 +263,8 @@ jobs:
             sed-i: "gsed -i"
           - os: "macos-15"
             sed-i: "gsed -i"
-          - os: "windows-2022"
-            sed-i: "sed -i"
+          # - os: "windows-2022"
+          #   sed-i: "sed -i"
           - os: "ubuntu-22.04"
             sed-i: "sed -i"
 
@@ -277,7 +278,3 @@ jobs:
           python-version: ${{ matrix.python-version }}
           sed-i: ${{ matrix.sed-i }}
           use-vtk: ${{ matrix.use-vtk }}
-
-
-
-
