--- a/.github/actions/build-ocp-addons/action.yml
+++ b/.github/actions/build-ocp-addons/action.yml
@@ -57,7 +57,7 @@ runs:
 
         apt-get update -qq
         apt-get install -qq -y freetype* libfreetype6-dev libgl1-mesa-glx  git \
-                                patch gcc g++ build-essential # > /dev/null 2>&1
+                                patch gcc g++ build-essential  > /dev/null 2>&1
 
         # micromamba install -c conda-forge gxx_linux-64=12
         pip install auditwheel patchelf build wheel
