--- a/.github/actions/build-ocp-addons/action.yml
+++ b/.github/actions/build-ocp-addons/action.yml
@@ -206,6 +206,14 @@ runs:
 
     # - - -
 
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: ocp_addons-${{ inputs.os }}-cp${{ inputs.python-version }}
+        path: ocp-addons/wheelhouse/*.whl
+
+    # - - -
+
     - name: Download novtk cadquery_ocp wheel
       uses: actions/download-artifact@v4
       with:
@@ -248,8 +256,3 @@ runs:
 
     # - - -
 
-    - name: Upload Artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: ocp_addons-${{ inputs.os }}-cp${{ inputs.python-version }}
-        path: wheelhouse/*.whl
