--- a/.github/actions/build-ocp-addons/action.yml
+++ b/.github/actions/build-ocp-addons/action.yml
@@ -252,7 +252,5 @@ runs:
         pip install ocp-addons/wheelhouse/ocp_addons*.whl
 
         python -c "import ocp_addons;print('ocp_addons imported successfully')"
-        python test.py
-
-    # - - -
+        python ocp-addons/test.py
 
