inject /usr/lib as rpath

--- a/.github/actions/build-ocp-addons/action.yml
+++ b/.github/actions/build-ocp-addons/action.yml
@@ -176,12 +176,14 @@ runs:
         VERSION=$(awk -F'"' '/^__version__/ {print $2}' setup.py)
 
         # Patch @rpath/libc++.1.dylib to /usr/lib/libc++.1.dylib
-        # cd dist
-        # python -m wheel unpack ocp_addons-${VERSION}*.whl
-        # rm ocp_addons-${VERSION}*.whl
-        # # install_name_tool -change @rpath/libc++.1.dylib /usr/lib/libc++.1.dylib ocp_addons*/*.so
-        # install_name_tool -add_rpath /usr/lib ocp_addons*/*.so
-
+        cd dist
+        python -m wheel unpack ocp_addons-${VERSION}*.whl
+        rm ocp_addons-${VERSION}*.whl
+        # install_name_tool -change @rpath/libc++.1.dylib /usr/lib/libc++.1.dylib ocp_addons*/*.so
+        install_name_tool -add_rpath /usr/lib ocp_addons*/*.so
+        python -m wheel pack ocp_addons-${VERSION}
+        cd ..
+               
         # @rpath/libc++.1.dylib confuses delocate but can safely be ignored
         DYLD_LIBRARY_PATH=$GITHUB_WORKSPACE/occt-${{ env.OCCT }}-novtk/lib:/usr/lib python \
             -m delocate.cmd.delocate_wheel \
