--- a/.github/actions/build-ocp-addons/action.yml
+++ b/.github/actions/build-ocp-addons/action.yml
@@ -181,6 +181,9 @@ runs:
         rm ocp_addons-${VERSION}*.whl
         # install_name_tool -change @rpath/libc++.1.dylib /usr/lib/libc++.1.dylib ocp_addons*/*.so
         install_name_tool -add_rpath /usr/lib ocp_addons*/*.so
+        for lib in ocp_addons.dylibs/libTK*.dylib; done
+          install_name_tool -add_rpath $lib
+        done
         python -m wheel pack ocp_addons-${VERSION}
         cd ..
                
@@ -211,7 +214,7 @@ runs:
     - name: Upload Artifact
       uses: actions/upload-artifact@v4
       with:
-        name: ocp_addons-${{ inputs.os }}-cp${{ inputs.python-version }}
+        name: ocp-addons-${{ env.WHEEL }}-${{ inputs.os }}-cp${{ inputs.python-version }}
         path: ocp-addons/wheelhouse/*.whl
 
     # - - -
