--- a/.github/actions/build-ocp-addons/action.yml
+++ b/.github/actions/build-ocp-addons/action.yml
@@ -250,6 +250,7 @@ runs:
 
         git clone https://github.com/gumyr/build123d.git
         cd build123d 
+        git checkout 1af4b0c3129dd152a1c9cb01400c1e648a5de8e2  # pre Gordon face to avoid 7.9. issues
         ${{ inputs.sed-i }} 's/cadquery-ocp >= 7\.8, < 7\.9/cadquery-ocp >= 7.8, < 8.0/g' pyproject.toml
         pip install .
         cd ..
@@ -259,9 +260,10 @@ runs:
         # micromamba activate ocpaddonstest
         # micromamba info --envs
 
-        ls ocp-addons/wheelhouse/*
         pip install ocp-addons/wheelhouse/ocp_addons*.whl
-        
         python -c "import ocp_addons;print('ocp_addons imported successfully')"
+        
+        pip list
+        
         python ocp-addons/test.py
 
