load vtk cadquery_ocp wheel

--- a/.github/actions/build-ocp-addons/action.yml
+++ b/.github/actions/build-ocp-addons/action.yml
@@ -219,10 +219,10 @@ runs:
 
     # - - -
 
-    - name: Download novtk cadquery_ocp wheel
+    - name: Download vtk cadquery_ocp wheel
       uses: actions/download-artifact@v4
       with:
-        name: cadquery-ocp-novtk-${{ env.WHEEL }}-${{ inputs.os }}-cp${{ inputs.python-version }}
+        name: cadquery-ocp-vtk-${{ env.WHEEL }}-${{ inputs.os }}-cp${{ inputs.python-version }}
         run-id: ${{ env.SDK_RUNID }}
         github-token: ${{ inputs.github-token }}
 
@@ -270,6 +270,6 @@ runs:
         python -c "import ocp_addons;print('ocp_addons imported successfully')"
         
         pip list
-        
+        command -v python
         python ocp-addons/test.py
 
