--- a/.github/actions/build-ocp-addons/action.yml
+++ b/.github/actions/build-ocp-addons/action.yml
@@ -180,8 +180,8 @@ runs:
         python -m wheel unpack ocp_addons-${VERSION}*.whl
         rm ocp_addons-${VERSION}*.whl
         # install_name_tool -change @rpath/libc++.1.dylib /usr/lib/libc++.1.dylib ocp_addons*/*.so
-        install_name_tool -add_rpath /usr/lib ocp_addons*/*.so
-        for lib in ocp_addons*/ocp_addons.dylibs/libTK*.dylib; do
+        install_name_tool -add_rpath /usr/lib ocp_addons-${VERSION}/*.so
+        for lib in ocp_addons-${VERSION}/ocp_addons.dylibs/libTK*.dylib; do
           install_name_tool -add_rpath /usr/lib  $lib
         done
         python -m wheel pack ocp_addons-${VERSION}
