--- a/.github/actions/build-ocp-addons/action.yml
+++ b/.github/actions/build-ocp-addons/action.yml
@@ -177,8 +177,8 @@ runs:
 
         # Patch @rpath/libc++.1.dylib to /usr/lib/libc++.1.dylib
         cd dist
-        tree
         python -m wheel unpack ocp_addons-${VERSION}*.whl
+        tree
         rm ocp_addons-${VERSION}*.whl
         # install_name_tool -change @rpath/libc++.1.dylib /usr/lib/libc++.1.dylib ocp_addons*/*.so
         install_name_tool -add_rpath /usr/lib ocp_addons-${VERSION}/*.so
@@ -278,5 +278,7 @@ runs:
         
         micromamba list
         command -v python
+        python -c "from build123d import *"
+
         python ocp-addons/test.py
 
