move test out of build ocp-addons job

--- a/.github/workflows/build-ocpaddons.yml
+++ b/.github/workflows/build-ocpaddons.yml
@@ -65,3 +65,37 @@ jobs:
                   python-version: ${{ matrix.python-version }}
                   sed-i: ${{ matrix.sed-i }}
                   github-token: ${{ secrets.GITHUB_TOKEN }}
+
+    tests:
+        name: Test OCP Addons on ${{ matrix.os }}
+        runs-on: ${{ matrix.os }}
+        needs: [addons-ubuntu, addons-win-mac]
+
+        strategy:
+            fail-fast: false
+            matrix:
+                # os: ["macos-13", "macos-15", "ubuntu-22.04", "windows-2022"]
+                os: ["macos-15", "ubuntu-22.04"]
+                # python-version: ["3.10", "3.11", "3.12", "3.13"]
+                python-version: ["3.13"]
+
+                include:
+                    - os: "ubuntu-22.04"
+                      sed-i: "sed -i"
+                    - os: "macos-15"
+                      sed-i: "gsed -i"
+                    # - os: "macos-13"
+                    #   sed-i: "gsed -i"
+                    # - os: "windows-2022"
+                    #   sed-i: "sed -i"
+
+        steps:
+            - uses: actions/checkout@v4
+            - name: Test OCP
+              id: test-ocp
+              uses: ./.github/actions/test-ocp-addons
+              with:
+                  os: ${{ matrix.os }}
+                  python-version: ${{ matrix.python-version }}
+                  sed-i: ${{ matrix.sed-i }}
+                  github-token: ${{ secrets.GITHUB_TOKEN }}
