--- a/.github/actions/test-ocp/action.yml
+++ b/.github/actions/test-ocp/action.yml
@@ -140,6 +140,7 @@ runs:
         git clone https://github.com/gumyr/build123d.git
 
         cd build123d
+        git checkout 1af4b0c3129dd152a1c9cb01400c1e648a5de8e2  # pre Gordon face to avoid 7.9. issues
         
         # install ocp_svg and svgelements (a ocp_svg dependency) without cadquery_ocp dependency
         pip install --no-deps ocpsvg svgelements
