--- a/.github/workflows/build-ocpaddons.yml
+++ b/.github/workflows/build-ocpaddons.yml
@@ -1,10 +1,11 @@
 name: Build OCP Addons
 
-# on: workflow_dispatch
-on:
-    push:
-        branches:
-            - v7.9
+on: workflow_dispatch
+# on:
+#     push:
+#         branches:
+#             - v7.9
+
 env:
     OCP: 7.9.1.0
     OCCT: 7.9.1
