--- a/.github/workflows/build-ocpaddons.yml
+++ b/.github/workflows/build-ocpaddons.yml
@@ -1,10 +1,10 @@
 name: Build OCP Addons
 
-on: workflow_dispatch
-# on:
-#     push:
-#         branches:
-#             - v7.9
+# on: workflow_dispatch
+on:
+    push:
+        branches:
+            - v7.9
 
 env:
     OCP: 7.9.1.0
@@ -44,17 +44,16 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                # os: ["macos-13", "macos-15", "windows-2022"]
-                os: ["macos-15"]
+                os: ["macos-13", "macos-15", "windows-2022"]
                 # python-version: ["3.10", "3.11", "3.12", "3.13"]
                 python-version: ["3.13"]
                 include:
                     - os: "macos-15"
                       sed-i: "gsed -i"
-                    # - os: "macos-13"
-                    #   sed-i: "gsed -i"
-                    # - os: "windows-2022"
-                    #   sed-i: "sed -i"
+                    - os: "macos-13"
+                      sed-i: "gsed -i"
+                    - os: "windows-2022"
+                      sed-i: "sed -i"
         steps:
             - uses: actions/checkout@v4
 
@@ -75,8 +74,7 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                # os: ["macos-13", "macos-15", "ubuntu-22.04", "windows-2022"]
-                os: ["macos-15", "ubuntu-22.04"]
+                os: ["macos-13", "macos-15", "ubuntu-22.04", "windows-2022"]
                 # python-version: ["3.10", "3.11", "3.12", "3.13"]
                 python-version: ["3.13"]
 
@@ -85,10 +83,10 @@ jobs:
                       sed-i: "sed -i"
                     - os: "macos-15"
                       sed-i: "gsed -i"
-                    # - os: "macos-13"
-                    #   sed-i: "gsed -i"
-                    # - os: "windows-2022"
-                    #   sed-i: "sed -i"
+                    - os: "macos-13"
+                      sed-i: "gsed -i"
+                    - os: "windows-2022"
+                      sed-i: "sed -i"
 
         steps:
             - uses: actions/checkout@v4
