--- a/.github/actions/build-ocp-addons/action.yml
+++ b/.github/actions/build-ocp-addons/action.yml
@@ -105,7 +105,7 @@ runs:
     # - - -
 
     - name: Clone ocp-addons and build wheel 
-      if runner.os != "Windows"
+      if: runner.os != "Windows"
       shell: bash -l {0}
       run: |
         # Clone ocp-addons and build wheel 
@@ -124,7 +124,7 @@ runs:
     # - - -
 
     - name: Clone ocp-addons and build wheel 
-      if runner.os == "Windows"
+      if: runner.os == "Windows"
       shell: cmd
       run: |
         rem Clone ocp-addons and build wheel 
